--- a/views/announcement.html
+++ b/views/announcement.html
@@ -4,6 +4,14 @@
         <thead>
             <tr>
                 <th>
+                    <label for="campaign">Campaign Name <span id="red">*</span>:</label>
+                </th>
+                <td>
+                    <input type="text" maxlength="30" class="form-control" ng-model='announcement.data[0].campaign' placeholder="Campaign Name">
+                </td>
+            </tr>
+            <tr>
+                <th>
                     <label for="shortTxt">Subject <span id="red">*</span>:</label>
                 </th>
                 <td>
@@ -15,7 +23,7 @@
                     <label for="imgURL">Image URL:</label>
                 </th>
                 <td>
-                    <input type="url" class="form-control" ng-model='announcement.data[0].imgURL' placeholder="Image Url"/>
+                    <input type="url" class="form-control" ng-model='announcement.data[0].imgURL' placeholder="Image Url" />
                 </td>
             </tr>
             <tr>
@@ -23,7 +31,7 @@
                     <label for="longTxt">Message <span id="red">*</span>:</label>
                 </th>
                 <td>
-                    <input type="text" maxlength="200" class="form-control" ng-model='announcement.data[0].longTxt' placeholder="Long Text"/>
+                    <input type="text" maxlength="200" class="form-control" ng-model='announcement.data[0].longTxt' placeholder="Long Text" />
                 </td>
             </tr>
             <tr>
@@ -31,7 +39,7 @@
                     <label for="sequence">Sequence:</label>
                 </th>
                 <td>
-                    <input type="number" class="form-control" ng-model='announcement.data[0].sequence' placeholder="sequence" min="1" max="99"/>
+                    <input type="number" class="form-control" ng-model='announcement.data[0].sequence' placeholder="sequence" min="1" max="99" />
                 </td>
             </tr>
             <tr>
@@ -98,7 +106,7 @@
                 </th>
                 <td>
                     <select class="btn btn-default" ng-model='announcement.data[0].appCodes[0].appCode'>
-                        <option value="WEBIN" >WEBIN</option>
+                        <option value="WEBIN">WEBIN</option>
                         <option value="M4">M4</option>
                     </select>
                 </td>
@@ -108,7 +116,7 @@
                     <label for="text">CallToActionText:</label>
                 </th>
                 <td>
-                    <input type="text" maxlength="10" class="form-control" ng-model='announcement.data[0].appCodes[0].callToAction[0].text' placeholder="text"/>
+                    <input type="text" maxlength="10" class="form-control" ng-model='announcement.data[0].appCodes[0].callToAction[0].text' placeholder="text" />
                 </td>
             </tr>
             <tr>
@@ -116,7 +124,7 @@
                     <label for="link">CallToActionLink:</label>
                 </th>
                 <td>
-                    <input type="text" class="form-control" ng-model='announcement.data[0].appCodes[0].callToAction[0].link' class="link" placeholder="link"/>
+                    <input type="text" class="form-control" ng-model='announcement.data[0].appCodes[0].callToAction[0].link' class="link" placeholder="link" />
                 </td>
             </tr>
             <tr>
@@ -134,4 +142,3 @@
     </table>
     <button type="button" class="btn btn-success" ng-click="update(announcement)">Update</button>
 </div>
-
