--- a/views/listAnnouncements.html
+++ b/views/listAnnouncements.html
@@ -7,6 +7,7 @@
             <th class="announcement">Valid From</th>
             <th class="announcement">Valid Till</th>
             <th class="announcement">Region</th>
+            <th class="announcement">Campaign Name</th>
             <th class="announcement" colspan="2">Message</th>
         </thead>
         <tbody>
@@ -16,6 +17,7 @@
                 <td class="announcement">{{data.validFrom | date:'yyyy-MM-dd HH:mm:ss a'}}</td>
                 <td class="announcement">{{data.validTill | date:'yyyy-MM-dd HH:mm:ss a'}}</td>
                 <td class="announcement"><span ng-repeat="data in data.regionCode">{{data}},</span></td>
+                <td class="announcement">{{data.campaign}}</td>
                 <td class="announcement">{{data.longTxt}}</td>
                 <td class="announcement">
                     <a href="#/announcement/{{data._id}}">Edit</a>
