--- a/views/new.html
+++ b/views/new.html
@@ -1,140 +1,148 @@
 <div ng-include="'views/dashboard.html'"></div>
 <div class='container announcement-container' ng-controller="NewCtrl">
-<form name="form">
-    <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    <label for="shortTxt">Subject <span id="red">*</span>:</label>
-                </th>
-                <td>
-                    <input type="text" maxlength="30" class="form-control" ng-model='announcement.shortTxt' placeholder="Short Text" required>
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    <label for="imgURL">Image URL:</label>
-                </th>
-                <td>
-                    <input type="url" class="form-control" ng-model='announcement.imgURL' placeholder="Image Url" />
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    <label for="longTxt">Message <span id="red">*</span>:</label>
-                </th>
-                <td>
-                    <input type="text" maxlength="200" class="form-control" ng-model='announcement.longTxt' placeholder="Long Text" required/>
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    <label for="sequence">Sequence:</label>
-                </th>
-                <td>
-                    <input type="number" class="form-control" ng-model='announcement.sequence' placeholder="Sequence" maxlength="2" min="1" max="99" />
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    <label for="type">Type:</label>
-                </th>
-                <td>
-                    <select class="btn btn-default" ng-model='announcement.type'>
-                        <option value="BACKOFFICE">BACKOFFICE</option>
-                        <option value="system">SYSTEM </option>
-                    </select>
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    <label for="validFrom">Valid From <span id="red">*</span>:</label>
-                </th>
-                <td>
-                    <div class="dropdown form-group">
-                        <a class="dropdown-toggle" id="dropdownStart" role="button" data-toggle="dropdown" data-target="#" href="#">
-                            <div class="input-group date">
-                                <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" class="form-control" data-ng-model="dateRangeStart" placeholder="Valid From" required>
-                                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                            </div>
-                        </a>
-                        <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                            <datetimepicker data-ng-model="dateRangeStart" data-datetimepicker-config="{ dropdownSelector: '#dropdownStart', renderOn: 'end-date-changed' }" data-on-set-time="startDateOnSetTime()" data-before-render="startDateBeforeRender($dates)"></datetimepicker>
-                        </ul>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    <label for="validTill">Valid Till <span id="red">*</span>:</label>
-                </th>
-                <td>
-                    <div class="dropdown form-group">
-                        <a class="dropdown-toggle" id="dropdownEnd" role="button" data-toggle="dropdown" data-target="#" href="#">
-                            <div class="input-group date">
-                                <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" class="form-control" data-ng-model="dateRangeEnd" placeholder="Valid Till" required>
-                                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                            </div>
-                        </a>
-                        <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                            <datetimepicker data-ng-model="dateRangeEnd" data-datetimepicker-config="{ dropdownSelector: '#dropdownEnd', renderOn: 'start-date-changed' }" data-on-set-time="endDateOnSetTime()" data-before-render="endDateBeforeRender($view, $dates, $leftDate, $upDate, $rightDate)"></datetimepicker>
-                        </ul>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    <label for="regionCode">Region code <span id="red">*</span>:</label>
-                </th>
-                <td>
-                    <div class="demo-section k-content">
-                        <select kendo-multi-select k-options="selectOptions" k-ng-model="selectedIds" ng-model='announcement.regionCode' name="regionCode" required>
+    <form name="form">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>
+                        <label for="campaign">Campaign Name <span id="red">*</span>:</label>
+                    </th>
+                    <td>
+                        <input type="text" maxlength="30" class="form-control" ng-model='announcement.campaign' placeholder="Campaign Name">
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="shortTxt">Subject <span id="red">*</span>:</label>
+                    </th>
+                    <td>
+                        <input type="text" maxlength="30" class="form-control" ng-model='announcement.shortTxt' placeholder="Short Text" required>
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="imgURL">Image URL:</label>
+                    </th>
+                    <td>
+                        <input type="url" class="form-control" ng-model='announcement.imgURL' placeholder="Image Url" />
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="longTxt">Message <span id="red">*</span>:</label>
+                    </th>
+                    <td>
+                        <input type="text" maxlength="200" class="form-control" ng-model='announcement.longTxt' placeholder="Long Text" required/>
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="sequence">Sequence:</label>
+                    </th>
+                    <td>
+                        <input type="number" class="form-control" ng-model='announcement.sequence' placeholder="Sequence" maxlength="2" min="1" max="99" />
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="type">Type:</label>
+                    </th>
+                    <td>
+                        <select class="btn btn-default" ng-model='announcement.type'>
+                            <option value="BACKOFFICE">BACKOFFICE</option>
+                            <option value="system">SYSTEM </option>
                         </select>
-                         <span ng-show="form.regionCode.$invalid && form.regionCode.$dirty || form.regionCode.$invalid && form.$submitted">Select Region Code</span>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    <label for="appCode">Appcode:</label>
-                </th>
-                <td>
-                    <select class="btn btn-default" ng-model='appCodefield.appCode'>
-                        <option value="WEBIN">WEBIN</option>
-                        <option value="M4">M4</option>
-                    </select>
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    <label for="text">CallToActionText:</label>
-                </th>
-                <td>
-                    <input type="text" ngMaxlength="10" class="form-control" ng-model='appCodefield.text' placeholder="Text" />
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    <label for="link">CallToActionLink:</label>
-                </th>
-                <td>
-                    <input type="text" class="form-control" ng-model='appCodefield.link' class="link" placeholder="Link" />
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    <label for="target">Target:</label>
-                </th>
-                <td>
-                    <select class="btn btn-default" ng-model='appCodefield.target'>
-                        <option value="_blank">New Window </option>
-                        <option value="_self">Same Window</option>
-                    </select>
-                </td>
-            </tr>
-        </thead>
-    </table>
-    <button type="submit" class="btn btn-primary" ng-click="create(announcement)">Create</button>
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="validFrom">Valid From <span id="red">*</span>:</label>
+                    </th>
+                    <td>
+                        <div class="dropdown form-group">
+                            <a class="dropdown-toggle" id="dropdownStart" role="button" data-toggle="dropdown" data-target="#" href="#">
+                                <div class="input-group date">
+                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" class="form-control" data-ng-model="dateRangeStart" placeholder="Valid From" required>
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                                </div>
+                            </a>
+                            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                                <datetimepicker data-ng-model="dateRangeStart" data-datetimepicker-config="{ dropdownSelector: '#dropdownStart', renderOn: 'end-date-changed' }" data-on-set-time="startDateOnSetTime()" data-before-render="startDateBeforeRender($dates)"></datetimepicker>
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="validTill">Valid Till <span id="red">*</span>:</label>
+                    </th>
+                    <td>
+                        <div class="dropdown form-group">
+                            <a class="dropdown-toggle" id="dropdownEnd" role="button" data-toggle="dropdown" data-target="#" href="#">
+                                <div class="input-group date">
+                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" class="form-control" data-ng-model="dateRangeEnd" placeholder="Valid Till" required>
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                                </div>
+                            </a>
+                            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                                <datetimepicker data-ng-model="dateRangeEnd" data-datetimepicker-config="{ dropdownSelector: '#dropdownEnd', renderOn: 'start-date-changed' }" data-on-set-time="endDateOnSetTime()" data-before-render="endDateBeforeRender($view, $dates, $leftDate, $upDate, $rightDate)"></datetimepicker>
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="regionCode">Region code <span id="red">*</span>:</label>
+                    </th>
+                    <td>
+                        <div class="demo-section k-content">
+                            <select kendo-multi-select k-options="selectOptions" k-ng-model="selectedIds" ng-model='announcement.regionCode' name="regionCode" required>
+                            </select>
+                            <span ng-show="form.regionCode.$invalid && form.regionCode.$dirty || form.regionCode.$invalid && form.$submitted">Select Region Code</span>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="appCode">Appcode:</label>
+                    </th>
+                    <td>
+                        <select class="btn btn-default" ng-model='appCodefield.appCode'>
+                            <option value="WEBIN">WEBIN</option>
+                            <option value="M4">M4</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="text">CallToActionText:</label>
+                    </th>
+                    <td>
+                        <input type="text" ngMaxlength="10" class="form-control" ng-model='appCodefield.text' placeholder="Text" />
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="link">CallToActionLink:</label>
+                    </th>
+                    <td>
+                        <input type="text" class="form-control" ng-model='appCodefield.link' class="link" placeholder="Link" />
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="target">Target:</label>
+                    </th>
+                    <td>
+                        <select class="btn btn-default" ng-model='appCodefield.target'>
+                            <option value="_blank">New Window </option>
+                            <option value="_self">Same Window</option>
+                        </select>
+                    </td>
+                </tr>
+            </thead>
+        </table>
+        <button type="submit" class="btn btn-primary" ng-click="create(announcement)">Create</button>
     </form>
 </div>
 </div>
