--- a/views/announcement.html
+++ b/views/announcement.html
@@ -31,7 +31,8 @@
                     <label for="longTxt">Message <span id="red">*</span>:</label>
                 </th>
                 <td>
-                    <input type="text" maxlength="200" class="form-control" ng-model='announcement.data[0].longTxt' placeholder="Long Text" />
+                    <textarea "text" maxlength="200" class="form-control" ng-model='announcement.data[0].longTxt' placeholder="Long Text">
+                    </textarea>
                 </td>
             </tr>
             <tr>
