--- a/views/new.html
+++ b/views/new.html
@@ -18,7 +18,7 @@
                         <label for="campaign">Campaign Name <span id="red">*</span>:</label>
                     </th>
                     <td>
-                        <input type="text" maxlength="30" class="form-control" ng-model='message.campaign' placeholder="Campaign Name" ng-change="checkCampaign()" required>
+                        <input type="text" maxlength="30" class="form-control" ng-model='message.campaign' placeholder="Campaign Name" ng-blur="checkCampaign()" required>
                     </td>
                 </tr>
                 <tr>
@@ -42,7 +42,8 @@
                         <label for="longTxt">Message <span id="red">*</span>:</label>
                     </th>
                     <td>
-                        <input type="text" maxlength="200" class="form-control" ng-model='message.longTxt' placeholder="Long Text" required/>
+                        <textarea "text" maxlength="200" class="form-control" ng-model='message.longTxt' placeholder="Long Text" required>   
+                        </textarea>
                     </td>
                 </tr>
                 <tr>
@@ -50,7 +51,7 @@
                         <label for="sequence">Sequence:</label>
                     </th>
                     <td>
-                        <input type="number" class="form-control" placeholder="Sequence" ng-model='message.Sequence' ng-change="limmiter()" min="1" max="99" />
+                        <input type="number" class="form-control" placeholder="Sequence" ng-model='message.Sequence' ng-change="limmiter()" min="0" max="99" />
                     </td>
                 </tr>
                 <tr>
@@ -58,9 +59,7 @@
                         <label for="type">Type:</label>
                     </th>
                     <td>
-                        <select class="btn btn-default" ng-model='message.type'>
-                            <option value="BACKOFFICE">BACKOFFICE</option>
-                        </select>
+                        <select class="btn btn-default" ng-model="selectType.systemTypeValue" ng-options="v for v in selectType.systemTypeValues"></select>
                     </td>
                 </tr>
                 <tr>
@@ -89,7 +88,7 @@
                         <div class="dropdown form-group">
                             <a class="dropdown-toggle" id="dropdownEnd" role="button" data-toggle="dropdown" data-target="#" href="#">
                                 <div class="input-group date">
-                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" class="form-control" data-ng-model="dateRangeEnd" placeholder="Valid Till" required>
+                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" class="form-control" data-ng-model="dateRangeEnd" placeholder="Valid Till" >
                                     <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                 </div>
                             </a>
@@ -115,7 +114,7 @@
                         <label for="memberEmail">Member Email <span id="red">*</span>:</label>
                     </th>
                     <td>
-                        <input type="text" class="form-control" ng-model='message.memberEmail' ng-blur="fetchMemberId()" placeholder="Member Email">
+                        <input type="text" class="form-control" ng-model='message.memberEmail' ng-blur="fetchMemberId()" placeholder="Member Email" ng-required="messageType.name=='notification'">
                     </td>
                 </tr>
                 <tr ng-show="messageType.notification">
@@ -131,10 +130,7 @@
                         <label for="appCode">Appcode:</label>
                     </th>
                     <td>
-                        <select class="btn btn-default" ng-model='appCodefield.appCode'>
-                            <option value="WEBIN">WEBIN</option>
-                            <option value="M4">M4</option>
-                        </select>
+                        <select class="btn btn-default" ng-model="selectType.appCodeTypeValue" ng-options="v for v in selectType.appCodeTypeValues"></select>
                     </td>
                 </tr>
                 <tr>
@@ -158,10 +154,7 @@
                         <label for="target">Target:</label>
                     </th>
                     <td>
-                        <select class="btn btn-default" ng-model='appCodefield.target'>
-                            <option value="_blank">New Window </option>
-                            <option value="_self">Same Window</option>
-                        </select>
+                        <select class="btn btn-default" ng-model="selectType.targetTypeValue" ng-options="v for v in selectType.targetTypeValues"></select>
                     </td>
                 </tr>
             </thead>
