--- a/views/new.html
+++ b/views/new.html
@@ -42,7 +42,7 @@
                         <label for="longTxt">Message <span id="red">*</span>:</label>
                     </th>
                     <td>
-                        <textarea "text" maxlength="200" class="form-control" ng-model='message.longTxt' placeholder="Long Text" required>   
+                        <textarea "text" maxlength="200" class="form-control" ng-model='message.longTxt' placeholder="Long Text" required>
                         </textarea>
                     </td>
                 </tr>
@@ -70,7 +70,7 @@
                         <div class="dropdown form-group">
                             <a class="dropdown-toggle" id="dropdownStart" role="button" data-toggle="dropdown" data-target="#" href="#">
                                 <div class="input-group date">
-                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" class="form-control" data-ng-model="dateRangeStart" placeholder="Valid From" required>
+                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" class="form-control" data-ng-model="dateRangeStart" placeholder="Valid From" readonly required>
                                     <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                 </div>
                             </a>
@@ -88,7 +88,7 @@
                         <div class="dropdown form-group">
                             <a class="dropdown-toggle" id="dropdownEnd" role="button" data-toggle="dropdown" data-target="#" href="#">
                                 <div class="input-group date">
-                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" class="form-control" data-ng-model="dateRangeEnd" placeholder="Valid Till" >
+                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" class="form-control" data-ng-model="dateRangeEnd" placeholder="Valid Till" readonly>
                                     <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                 </div>
                             </a>
