--- a/views/notification.html
+++ b/views/notification.html
@@ -31,7 +31,7 @@
                     <label for="longTxt">Message <span id="red">*</span>:</label>
                 </th>
                 <td>
-                    <textarea "text" maxlength="200" class="form-control" ng-model='notification.data[0].longTxt' placeholder="Long Text">   
+                    <textarea maxlength="200" class="form-control" ng-model='notification.data[0].longTxt' placeholder="Long Text">
                     </textarea>
                 </td>
             </tr>
