calltoactionlink type changed to url

--- a/views/new.html
+++ b/views/new.html
@@ -146,7 +146,7 @@
                         <label for="link">CallToActionLink:</label>
                     </th>
                     <td>
-                        <input type="text" class="form-control" ng-model='appCodefield.link' class="link" placeholder="Link" />
+                        <input type="url" class="form-control" ng-model='appCodefield.link' class="link" placeholder="Link" />
                     </td>
                 </tr>
                 <tr>
