--- a/views/scheduled.html
+++ b/views/scheduled.html
@@ -1,5 +1,6 @@
-<div ng-controller="ScheduledCtrl">
-    <div ng-include="'views/dashboard.html'"></div>
-
-</div>
+<div ng-include="'views/dashboard.html'"></div>
+<div class='container announcement-container' ng-controller='ScheduledCtrl'>
+    <div class="row MT15">
+        <p>This feature is coming up next...</p>
+    </div>
 </div>
