--- a/views/new.html
+++ b/views/new.html
@@ -64,13 +64,14 @@
                 </tr>
                 <tr>
                     <th>
-                        <label for="validFrom">Valid From <span id="red">*</span>:</label>
+                        <label for="validFrom" style='margin-bottom: 20%;'>Valid From <span id="red">*</span>:</label>
                     </th>
                     <td>
+                        <p id='red' ng-show="show">The minimum difference between Valid From & Valid Till must be 5hrs and 50 minutes</p>
                         <div class="dropdown form-group">
                             <a class="dropdown-toggle" id="dropdownStart" role="button" data-toggle="dropdown" data-target="#" href="#">
                                 <div class="input-group date">
-                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" class="form-control" data-ng-model="dateRangeStart" placeholder="Valid From" readonly required>
+                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" ng-click="showWarning()" class="form-control" data-ng-model="dateRangeStart" placeholder="Valid From" readonly required>
                                     <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                 </div>
                             </a>
@@ -82,7 +83,7 @@
                 </tr>
                 <tr>
                     <th>
-                        <label for="validTill">Valid Till <span id="red">*</span>:</label>
+                        <label style='margin-bottom: 16%;' for="validTill">Valid Till <span id="red">*</span>:</label>
                     </th>
                     <td>
                         <div class="dropdown form-group">
