--- a/views/announcement.html
+++ b/views/announcement.html
@@ -40,7 +40,7 @@
                     <label for="sequence">Sequence:</label>
                 </th>
                 <td>
-                    <input type="number" class="form-control" ng-model='announcement.data[0].sequence' placeholder="sequence" min="1" max="99" />
+                    <input type="number" class="form-control" ng-model='announcement.data[0].sequence' ng-blur="limmiter()" placeholder="sequence" min="0" max="99" />
                 </td>
             </tr>
             <tr>
@@ -56,13 +56,14 @@
             </tr>
             <tr>
                 <th>
-                    <label for="validFrom">Valid From <span id="red">*</span>:</label>
+                    <label for="validFrom" style='margin-bottom: 20%;'>Valid From <span id="red">*</span>:</label>
                 </th>
                 <td>
+                    <p id='red' ng-show="show">The minimum difference between Valid From & Valid Till must be 5hrs and 50 minutes</p>
                     <div class="dropdown form-group">
                         <a class="dropdown-toggle" id="dropdownStart" role="button" data-toggle="dropdown" data-target="#" href="#">
                             <div class="input-group date">
-                                <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" class="form-control" data-ng-model="dateRangeStart" name="validFrom" required>
+                                <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" ng-click="showWarning()" type="text" class="form-control" data-ng-model="dateRangeStart" name="validFrom" required>
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                             </div>
                         </a>
@@ -74,7 +75,7 @@
             </tr>
             <tr>
                 <th>
-                    <label for="validTill">Valid Till<span id="red">*</span>:</label>
+                    <label style='margin-bottom: 16%;' for="validTill">Valid Till <span id="red">*</span>:</label>
                 </th>
                 <td>
                     <div class="dropdown form-group">
