--- a/views/new.html
+++ b/views/new.html
@@ -113,8 +113,9 @@
                     </th>
                     <td>
                         <div class="demo-section k-content">
-                            <select kendo-multi-select k-options="selectOptions" k-ng-model="selectedIds" ng-model='message.regionCode'>
-                            </select>
+                            <select kendo-multi-select k-options="selectOptions" ng-model='message.regionCode'>
+<!--  k-ng-model="selectedIds"
+ -->                            </select>
                         </div>
                     </td>
                 </tr>
@@ -169,7 +170,7 @@
                         <label for="target">Target:</label>
                     </th>
                     <td>
-                        <select class="btn btn-default" ng-model="selectType.targetTypeValue" ng-options="v for v in selectType.targetTypeValues"></select>
+                        <select class="btn btn-default" ng-model="selectType.targetTypeValue" ng-options="v.name for v in selectType.targetTypeValues"></select>
                     </td>
                 </tr>
             </thead>
